replace collect with toList()